--- a/index.html
+++ b/index.html
@@ -9,6 +9,62 @@
     <title>Nizaam-Portfolio</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"><img class="img-fluid w" src="https://jefthanizaam01.github.io/favoriteimages/images/logo2.png" alt="logo"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="#home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#education">Education</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#skills">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#experience">Work Experience</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#testimonials">Testimonials</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#reachMe">Reach me</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <main class="container-fluid">
+        <section class="container min-vh-100" id="home">
+            <div class="row my-4 flex-column flex-md-row align-items-center justify-content-center">
+                <div class="col">
+                    <img class="img-thumbnail border-5" src="https://jefthanizaam01.github.io/favoriteimages/images/Profile2.jpg"
+                        alt="profile" loading="lazy">
+                </div>
+                <div class="col">
+                    <div class="name"><h1>Hi, It's <span>Nizaam Jeftha</span></h1>
+                        <h3 class="developer">I'm an <span>Aspiring Developer</span></h3>
+                    </div>
+                    <p class="lead">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique ipsum, voluptatibus facilis
+                        incidunt dicta enim voluptas maiores quaerat, eum est deleniti suscipit doloribus. Dolorem
+                        quisquam modi repellendus earum nesciunt magni.
+                    </p>
+                </div>
+            </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
