--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                 <div class="col">
                     <div class="name"><h1>Hi, It's <span>Nizaam Jeftha</span></h1>
                         <h3 class="developer">I'm an <span>Aspiring Developer</span></h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi officiis aliquid, fuga omnis at, id dolore possimus sit nemo facilis totam repudiandae? Hic magni facere nobis praesentium quos assumenda voluptatem!</p>
                     </div>
-                    
                 </div>
                 
             </div>
