--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="https://jefthanizaam01.github.io/favoriteimages/images/Logo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <title>Nizaam-Portfolio</title>
 </head>
@@ -59,11 +63,10 @@
         <span style="--i:17;"></span>
         <span style="--i:13;"></span>
         <span style="--i:28;"></span>
-        
     </div>
     <nav class="navbar navbar-expand-lg mt-0 fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img class="img" src="https://jefthanizaam01.github.io/favoriteimages/images/logo4.png" alt="logo"></a>
+          <a class="navbar-brand" href="#"><img class="img" src="https://jefthanizaam01.github.io/favoriteimages/images/NJJ.png" alt="logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -109,10 +112,8 @@
                 <div class="col">
                     <div class="name"><h1>Hi, It's <span>Nizaam Jeftha</span></h1>
                         <h3 class="developer">I'm an <span>Aspiring Developer</span></h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi officiis aliquid, fuga omnis at, id dolore possimus sit nemo facilis totam repudiandae? Hic magni facere nobis praesentium quos assumenda voluptatem!</p>
                     </div>
                 </div>
-                
             </div>
         </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
