--- a/index.html
+++ b/index.html
@@ -112,8 +112,98 @@
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi officiis aliquid, fuga omnis at, id dolore possimus sit nemo facilis totam repudiandae? Hic magni facere nobis praesentium quos assumenda voluptatem!</p>
                     </div>
                 </div>
-                
+            </section>
             </div>
+            <section class="container" id="about">
+                <div class="row">
+                    <h2 class="display-2 text-center" id="Ab">About</h2>
+                </div>
+                <div class="row">
+                    <p class="lead ">
+                        <div class="cardz cardAbout m-auto">
+                            <p class="cardz-text m-auto">I am an aspiring developer who become interested in coding whilst in my second year of university. At the time I was studying biotechnology but quickly became interested in software development after becoming curious as to how websites are build. When I'm not coding, you'll often find me outdoors, appreciating nature's beauty, whether it's hiking or enjoying a day at the beach. I also love connecting with others and working together to bring ideas to life from collaborating with fellow developers to understanding clients' needs, building meaningful relationships is at the heart of what I do.
+                            </p>
+                            <div class="aboutInfo col-md-12">
+                                <div class="myInfo mt-3">
+                                    <p>Full Name : Nizaam Jeftha</p>
+                                </div>
+                                <div class="myInfo mt-3">
+                                    <p>Date of Birth : 31/05/2001</p>
+                                </div>
+                                <div class="myInfo mt-3">
+                                    <p>Location : Cape Town, South Africa</p>
+                                </div>
+                                <div class="myInfo mt-3">
+                                    <p>Cell Phone Number : (+27) 84 734 9535</p>
+                                </div>
+                                <div class="myInfo mt-3">
+                                    <p>Email Address :  nizaam01.jeftha@gmail.com</p>
+                                </div>
+                            </div>
+                        </div>
+                    </p>
+                </div>
+            </section>
+            <section class="container" id="education">
+                <div class="row">
+                    <h2 class="display-2">Education</h2>
+                </div>
+            </section>
+            <section class="container" id="skills">
+                <div class="row">
+                    <h2 class="display-2">Skills</h2>
+                </div>
+            </section>
+            <section class="container" id="experience">
+                <div class="row">
+                    <h2 class="display-2">Experience</h2>
+                </div>
+            </section>
+            <section class="container" id="projects">
+                <div class="row">
+                    <h2 class="display-2">
+                        Projects
+                    </h2>
+                </div>
+            </section>
+            <section class="container" id="testimonials">
+                <div class="row">
+                    <h2 class="display-2">
+                        Testimonials
+                    </h2>
+                </div>
+            </section>
+            <section class="container" id="reachMe">
+                <div class="row">
+                    <h2 class="display-2">Reach Me</h2>
+                </div>
+                <div class="row mb-3">
+                    <form action="https://formspree.io/f/xoqoydae" method="POST">
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Message</label>
+                            <input type="text" class="form-control" id="exampleInputPassword1">
+                        </div>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+            </section>
+        </main>
+        <footer class="container-fluid">
+            <div class="row">
+                <p class="lead text-white">
+                    <span class="shadow">Nizaam's Portfolio</span>
+                    <span>&copy; 2024</span>
+                </p>
+            </div>
+        </footer>
         </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
