--- a/index.html
+++ b/index.html
@@ -109,11 +109,39 @@
                 <div class="col">
                     <div class="name"><h1>Hi, It's <span>Nizaam Jeftha</span></h1>
                         <h3 class="developer">I'm an <span>Aspiring Developer</span></h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi officiis aliquid, fuga omnis at, id dolore possimus sit nemo facilis totam repudiandae? Hic magni facere nobis praesentium quos assumenda voluptatem!</p>
                     </div>
                 </div>
-                
             </div>
+            <section class="container" id="about">
+                <div class="row">
+                    <h2 class="display-2 text-center" id="Ab">About</h2>
+                </div>
+                <div class="row">
+                    <p class="lead ">
+                        <div class="cardz cardAbout m-auto">
+                            <p class="cardz-text m-auto">I am an aspiring developer who became interested in coding whilst in my second year of university. At the time I was studying biotechnology but quickly became interested in software development after becoming curious as to how websites are build. When I'm not coding, you'll often find me outdoors, appreciating nature's beauty, whether it's hiking or enjoying a day at the beach. I also love connecting with others and working together to bring ideas to life, from collaborating with fellow developers to just hanging out as friends. Building meaningful relationships is at the heart of what I do.
+                            </p>
+                            <div class="aboutInfo col-md-12">
+                                <div class="myInfo mt-3">
+                                    <p>Full Name : Nizaam Jeftha</p>
+                                </div>
+                                <div class="myInfo mt-3">
+                                    <p>Date of Birth : 31/05/2001</p>
+                                </div>
+                                <div class="myInfo mt-3">
+                                    <p>Location : Cape Town, South Africa</p>
+                                </div>
+                                <div class="myInfo mt-3">
+                                    <p>Cell Phone Number : (+27) 84 734 9535</p>
+                                </div>
+                                <div class="myInfo mt-3">
+                                    <p>Email Address :  nizaam01.jeftha@gmail.com</p>
+                                </div>
+                            </div>
+                        </div>
+                    </p>
+                </div>
+            </section>
         </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
