--- a/index.html
+++ b/index.html
@@ -233,6 +233,64 @@
               </div>
                 </div>
             </section>
+            <section class="container" id="skills">
+                <div class="row">
+                    <h2 class="display-2 text-center" id="skill">Skills</h2>
+                    <div class="row row-cols-1 row-cols-md-3 g-4">
+                        <div class="col">
+                          <div class="card h-100">
+                            <div class="card-body" id="skillglow">
+                              <h5 class="card-title">HTML5</h5>
+                              <p class="card-text">Proficient - in HTML5 with extensive experience in crafting modern and responsive web layouts.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col">
+                          <div class="card h-100">
+                            <div class="card-body" id="skillglow">
+                              <h5 class="card-title">CSS</h5>
+                              <p class="card-text">Intermediate -  in CSS for styling web elements with moderate complexity and responsiveness.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col">
+                          <div class="card h-100">
+                            <div class="card-body" id="skillglow">
+                              <h5 class="card-title">Javascript</h5>
+                              <p class="card-text">Beginner level - Exploring the basics of JavaScript, developing simple scripts for basic functionality.</p>
+                            </div>
+                            
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row row-cols-1 row-cols-md-3 g-4">
+                        <div class="col">
+                          <div class="card h-100">
+                            <div class="card-body" id="skillglow">
+                              <h5 class="card-title">Problem Solving</h5>
+                              <p class="card-text">Adept at solving problems by breaking them down into manageable steps and finding creative solutions.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col">
+                          <div class="card h-100">
+                            <div class="card-body" id="skillglow">
+                              <h5 class="card-title">Communication Skills</h5>
+                              <p class="card-text">Good at communicating ideas clearly and working well with others to get things done.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col">
+                          <div class="card h-100">
+                            <div class="card-body" id="skillglow">
+                              <h5 class="card-title">Time Management</h5>
+                              <p class="card-text">Expert at managing time wisely, ensuring each moment counts toward achieving objectives.</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                     
+                </div>
             </section>
             <section class="container" id="projects">
                 <div class="row">
