--- a/index.html
+++ b/index.html
@@ -523,10 +523,10 @@
                       </div>
                     </section>
         </main>
-        <footer class="container-fluid">
+        <footer id="low" class="container-fluid">
             <div class="row">
-                <p class="lead text-white">
-                    <span class="shadow">Nizaam's Portfolio</span>
+                <p id="lowcontent" class="bottom text-black text-center">
+                    <span class="below"> Nizaam's Portfolio</span>
                     <span>&copy; 2024</span>
                 </p>
             </div>
